--- a/tests/integration/targets/regression-v2.9/tasks/main.yml
+++ b/tests/integration/targets/regression-v2.9/tasks/main.yml
@@ -56,8 +56,8 @@
           site: "Test Site"
           status: "Staged"
           tags:
-            - first
-            - second
+            - slug: first
+            - slug: second
 
     - name: "4 - Add device with tags out of order - shouldn't change - Tests #242 is fixed"
       netbox.netbox.netbox_device:
@@ -70,8 +70,8 @@
           site: "Test Site"
           status: "Staged"
           tags:
-            - second
-            - first
+            - slug: second
+            - slug: first
       register: test_four
       diff: yes
 
@@ -92,9 +92,9 @@
           status: "Staged"
           asset_tag: "1234"
           tags:
-            - second
-            - third
-            - first
+            - slug: second
+            - slug: third
+            - slug: first
       register: test_five
       diff: yes
 
@@ -148,9 +148,9 @@
           status: "Staged"
           asset_tag: "Null"
           tags:
-            - second
-            - third
-            - first
+            - slug: second
+            - slug: third
+            - slug: first
       register: test_seven
 
     - name: "5 - Assert added tag - Tests #242 is fixed"
@@ -159,3 +159,38 @@
           - test_seven is changed
           - test_seven["diff"]["after"]["asset_tag"] == "Null"
           - test_seven["device"]["asset_tag"] == "Null"
+
+    - name: Add ip address to netbox and don't assign it to a device (Issue 372)
+      netbox.netbox.netbox_ip_address:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          address: 10.255.255.1/24
+        query_params:
+          - address
+          - vrf
+        state: present
+
+    - name: Update same ip address to attach to a device interface (Issue 372)
+      netbox.netbox.netbox_ip_address:
+        netbox_url: "http://localhost:32768"
+        netbox_token: "0123456789abcdef0123456789abcdef01234567"
+        data:
+          address: 10.255.255.1/24
+          assigned_object:
+            device: test100
+            name: GigabitEthernet1
+        query_params:
+          - address
+          - vrf
+        state: present
+      register: query_params_372
+
+    - name: Assert ip address was updated and added to device interface
+      assert:
+        that:
+          - query_params_372 is changed
+          - query_params_372['msg'] == 'ip_address 10.255.255.1/24 updated'
+          - query_params_372['diff']['after']['assigned_object'] == 3
+          - query_params_372['diff']['after']['assigned_object_id'] == 3
+          - query_params_372['diff']['after']['assigned_object_type'] == 'dcim.interface'
