--- a/tests/integration/targets/v2.9/tasks/netbox_ip_address.yml
+++ b/tests/integration/targets/v2.9/tasks/netbox_ip_address.yml
@@ -39,10 +39,10 @@
     that:
       - test_two is changed
       - test_two['diff']['after']['description'] == "Updated ip address"
-      - test_two['diff']['after']['tags'][0] == "Updated"
+      - test_two['diff']['after']['tags'][0] == 10
       - test_two['msg'] == "ip_address 192.168.1.10/30 updated"
       - test_two['ip_address']['address'] == "192.168.1.10/30"
-      - test_two['ip_address']['tags'][0] == "Updated"
+      - test_two['ip_address']['tags'][0] == 10
       - test_two['ip_address']['description'] == "Updated ip address"
 
 - name: "3 - Delete IP - 192.168.1.10 - State: Absent"
@@ -145,7 +145,7 @@
       - test_seven['ip_address']['family'] == 4
       - test_seven['ip_address']['role'] == "loopback"
       - test_seven['ip_address']['status'] == "reserved"
-      - test_seven['ip_address']['tags'][0] == "Schnozzberry"
+      - test_seven['ip_address']['tags'][0] == 4
       - test_seven['ip_address']['tenant'] == 1
       - test_seven['ip_address']['vrf'] == 1
 
@@ -160,7 +160,6 @@
       nat_inside:
         address: 172.16.1.20
         vrf: Test VRF
-      interface: 3
   register: test_eight
 
 - name: "8 - ASSERT"
@@ -172,8 +171,7 @@
       - test_eight['msg'] == "ip_address 10.10.1.30/16 created"
       - test_eight['ip_address']['address'] == "10.10.1.30/16"
       - test_eight['ip_address']['family'] == 4
-      - test_eight['ip_address']['interface'] == 3
-      - test_eight['ip_address']['nat_inside'] == 10
+      - test_eight['ip_address']['nat_inside'] == 11
       - test_eight['ip_address']['vrf'] == 1
 
 - name: "9 - Create IP address on GigabitEthernet2 - test100 - State: present"
@@ -183,7 +181,7 @@
     data:
       family: 4
       address: 10.10.200.30/16
-      interface:
+      assigned_object:
         name: GigabitEthernet2
         device: test100
   register: test_nine
@@ -197,7 +195,8 @@
       - test_nine['msg'] == "ip_address 10.10.200.30/16 created"
       - test_nine['ip_address']['address'] == "10.10.200.30/16"
       - test_nine['ip_address']['family'] == 4
-      - test_nine['ip_address']['interface'] == 4
+      - test_nine['ip_address']['assigned_object_type'] == "dcim.interface"
+      - test_nine['ip_address']['assigned_object_id'] == 4
 
 - name: "10 - Create IP address on GigabitEthernet2 - test100 - State: new"
   netbox.netbox.netbox_ip_address:
@@ -206,7 +205,7 @@
     data:
       family: 4
       prefix: 10.10.0.0/16
-      interface:
+      assigned_object:
         name: GigabitEthernet2
         device: test100
     state: new
@@ -221,7 +220,8 @@
       - test_ten['msg'] == "ip_address 10.10.0.1/16 created"
       - test_ten['ip_address']['address'] == "10.10.0.1/16"
       - test_ten['ip_address']['family'] == 4
-      - test_ten['ip_address']['interface'] == 4
+      - test_ten['ip_address']['assigned_object_type'] == "dcim.interface"
+      - test_ten['ip_address']['assigned_object_id'] == 4
 
 - name: "11 - Create IP address on GigabitEthernet2 - test100 - State: present"
   netbox.netbox.netbox_ip_address:
@@ -230,7 +230,7 @@
     data:
       family: 4
       prefix: 192.168.100.0/24
-      interface:
+      assigned_object:
         name: GigabitEthernet2
         device: test100
     state: present
@@ -251,7 +251,7 @@
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
       address: 192.168.100.2/24
-      interface:
+      assigned_object:
         name: GigabitEthernet2
         device: test100
     state: present
@@ -263,7 +263,8 @@
       - not test_twelve['changed']
       - test_twelve['msg'] == "ip_address 192.168.100.2/24 already exists"
       - test_twelve['ip_address']['address'] == "192.168.100.2/24"
-      - test_twelve['ip_address']['interface'] == 4
+      - test_twelve['ip_address']['assigned_object_type'] == "dcim.interface"
+      - test_twelve['ip_address']['assigned_object_id'] == 4
 
 - name: "13 - Duplicate - 192.168.100.2/24"
   netbox.netbox.netbox_ip_address:
@@ -288,7 +289,7 @@
     data:
       family: 4
       address: 10.188.1.100/24
-      interface:
+      assigned_object:
         name: Eth0
         virtual_machine: test100-vm
   register: test_fourteen
@@ -302,7 +303,8 @@
       - test_fourteen['msg'] == "ip_address 10.188.1.100/24 created"
       - test_fourteen['ip_address']['address'] == "10.188.1.100/24"
       - test_fourteen['ip_address']['family'] == 4
-      - test_fourteen['ip_address']['interface'] == 5
+      - test_fourteen['ip_address']['assigned_object_type'] == "virtualization.vminterface"
+      - test_fourteen['ip_address']['assigned_object_id'] == 1
 
 - name: "15 - Create same IP address on Eth0 - test101-vm - State: present"
   netbox.netbox.netbox_ip_address:
@@ -311,7 +313,7 @@
     data:
       family: 4
       address: 10.188.1.100/24
-      interface:
+      assigned_object:
         name: Eth0
         virtual_machine: test101-vm
     state: "present"
@@ -326,7 +328,8 @@
       - test_fifteen['msg'] == "ip_address 10.188.1.100/24 created"
       - test_fifteen['ip_address']['address'] == "10.188.1.100/24"
       - test_fifteen['ip_address']['family'] == 4
-      - test_fifteen['ip_address']['interface'] == 10
+      - test_fifteen['ip_address']['assigned_object_type'] == "virtualization.vminterface"
+      - test_fifteen['ip_address']['assigned_object_id'] == 6
 
 - name: "16 - Create IP address with no mask - State: Present"
   netbox.netbox.netbox_ip_address:
