--- a/tests/integration/targets/inventory-latest/files/test-inventory-options.yml
+++ b/tests/integration/targets/inventory-latest/files/test-inventory-options.yml
@@ -16,6 +16,7 @@ interfaces: False
 services: False
 group_names_raw: True
 virtual_chassis_name: True
+virtual_chassis_members: True
 dns_name: True
 
 group_by:
