Continue statement if item in a list is an integer

--- a/tests/integration/targets/regression-v2.9/tasks/main.yml
+++ b/tests/integration/targets/regression-v2.9/tasks/main.yml
@@ -150,7 +150,8 @@
           tags:
             - slug: second
             - slug: third
-            - slug: first
+            # Changed this to an ID for issue #407
+            - 0
       register: test_seven
 
     - name: "5 - Assert added tag - Tests #242 is fixed"
