Updated again to pass in full list of IDs and continue after appending

--- a/tests/integration/targets/regression-v2.9/tasks/main.yml
+++ b/tests/integration/targets/regression-v2.9/tasks/main.yml
@@ -148,9 +148,9 @@
           status: "Staged"
           asset_tag: "Null"
           tags:
-            - slug: second
-            - slug: third
-            # Changed this to an ID for issue #407
+            # Changed these for issue #407 to be IDs
+            - 2
+            - 3
             - 1
       register: test_seven
 
