--- a/tests/integration/targets/regression-latest/tasks/main.yml
+++ b/tests/integration/targets/regression-latest/tasks/main.yml
@@ -148,8 +148,9 @@
           status: "Staged"
           asset_tag: "Null"
           tags:
-            - slug: second
-            - slug: third
+            # Changed these for issue #407 to be IDs
+            - 2
+            - 3
             - 1
       register: test_seven
 
