Created route_targets module and updated docs as going through

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -9,7 +9,7 @@ namespace: netbox
 name: netbox
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 1.2.1
+version: 1.3.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -22,7 +22,7 @@ authors:
 ### OPTIONAL but strongly recommended
 
 # A short summary description of the collection
-description: This is a collection of Netbox Ansible modules
+description: This is a collection of NetBox Ansible modules
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
@@ -68,8 +68,9 @@ issues: https://github.com/netbox-community/ansible_modules/issues
 # https://github.com/ansible/ansible/issues/67543
 # https://docs.ansible.com/ansible/devel/dev_guide/developing_collections.html#ignoring-files-and-folders
 build_ignore:
-  - venv
-  - ansible_collections
-  - tests/output
-  - .pytest_cache
-  - .vscode
+  - "venv"
+  - "ansible_collections"
+  - "tests/output"
+  - ".pytest_cache"
+  - ".vscode"
+  - "*.tar.gz"
