--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Deploy collection to Ansible Galaxy
 on:
-  create:
-    tags:
-      - "v*"
+  push:
+    branches:
+      - "refs/tags/v*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
