--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Deploy collection to Ansible Galaxy
 on:
-  push:
-    branches:
-      - "refs/tags/v*"
+  create:
+    tags:
+      - "v*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
