--- a/tests/integration/targets/latest/tasks/netbox_power_outlet_template.yml
+++ b/tests/integration/targets/latest/tasks/netbox_power_outlet_template.yml
@@ -53,7 +53,7 @@
       name: Power Outlet Template
       device_type: Device Type Power Tests
       type: ita-e
-      power_port: Power Port
+      power_port_template: Power Port Template
       feed_leg: B
     state: present
   register: test_three
@@ -63,12 +63,12 @@
     that:
       - test_three is changed
       - test_three['diff']['after']['type'] == "ita-e"
-      - test_three['diff']['after']['power_port'] == 1
+      - test_three['diff']['after']['power_port_template'] == 1
       - test_three['diff']['after']['feed_leg'] == "B"
       - test_three['power_outlet_template']['name'] == "Power Outlet Template"
       - test_three['power_outlet_template']['device_type'] == 8
       - test_three['power_outlet_template']['type'] == "ita-e"
-      - test_three['power_outlet_template']['power_port'] == 1
+      - test_three['power_outlet_template']['power_port_template'] == 1
       - test_three['power_outlet_template']['feed_leg'] == "B"
       - test_three['msg'] == "power_outlet_template Power Outlet Template updated"
 
