--- a/tests/integration/targets/v2.9/tasks/netbox_cable.yml
+++ b/tests/integration/targets/v2.9/tasks/netbox_cable.yml
@@ -80,6 +80,8 @@
       color: abcdef
       length: 30
       length_unit: m
+      tags:
+        - "Schnozzberry"
     state: present
   register: test_three
 
@@ -93,6 +95,7 @@
       - test_three['diff']['after']['color'] == "abcdef"
       - test_three['diff']['after']['length'] == 30
       - test_three['diff']['after']['length_unit'] == "m"
+      - test_three['diff']['after']['tags'][0] == 4
       - test_three['cable']['termination_a_type'] == "dcim.interface"
       - test_three['cable']['termination_a_id'] == 13
       - test_three['cable']['termination_b_type'] == "dcim.interface"
@@ -103,6 +106,7 @@
       - test_three['cable']['color'] == "abcdef"
       - test_three['cable']['length'] == 30
       - test_three['cable']['length_unit'] == "m"
+      - test_three['cable']['tags'][0] == 4
       - test_three['msg'] == "cable dcim.interface Ethernet2/2 <> dcim.interface Ethernet2/1 updated"
 
 - name: "CABLE 4: ASSERT - Delete"
