--- a/tests/integration/targets/v2.9/tasks/netbox_tenant_group.yml
+++ b/tests/integration/targets/v2.9/tasks/netbox_tenant_group.yml
@@ -55,7 +55,7 @@
       - test_three['diff']['after']['state'] == "absent"
       - test_three['msg'] == "tenant_group Test Tenant Group Two deleted"
 
-- name: "4 - Test another tenant group creation"
+- name: "4 - Test tenant group creation with custom slug"
   netbox.netbox.netbox_tenant_group:
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
@@ -73,3 +73,57 @@
       - test_four['tenant_group']['name'] == "Test Tenant Group ABC"
       - test_four['tenant_group']['slug'] == "test_tenant_group_four"
       - test_four['msg'] == "tenant_group Test Tenant Group ABC created"
+
+- name: "5 - Test child tenant group creation"
+  netbox.netbox.netbox_tenant_group:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      name: "Child Test Tenant Group"
+      parent_tenant_group: "{{ test_four.tenant_group.slug }}"
+  register: test_five
+
+- name: "5 - ASSERT"
+  assert:
+    that:
+      - test_five is changed
+      - test_five['diff']['before']['state'] == "absent"
+      - test_five['diff']['after']['state'] == "present"
+      - test_five['tenant_group']['name'] == "Child Test Tenant Group"
+      - test_five['tenant_group']['parent'] == {{ test_four.tenant_group.id }}
+      - test_five['msg'] == "tenant_group Child Test Tenant Group created"
+
+- name: "6 - Test child tenant group deletion"
+  netbox.netbox.netbox_tenant_group:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      name: "Child Test Tenant Group"
+    state: "absent"
+  register: test_six
+
+- name: "6 - ASSERT"
+  assert:
+    that:
+      - test_six is changed
+      - test_six['diff']['before']['state'] == "present"
+      - test_six['diff']['after']['state'] == "absent"
+      - test_six['msg'] == "tenant_group Child Test Tenant Group deleted"
+
+- name: "7 - Test deletion of the tenant group with custom slug"
+  netbox.netbox.netbox_tenant_group:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      name: "Test Tenant Group ABC"
+      slug: "test_tenant_group_four"
+    state: "absent"
+  register: test_seven
+
+- name: "7 - ASSERT"
+  assert:
+    that:
+      - test_seven is changed
+      - test_seven['diff']['before']['state'] == "present"
+      - test_seven['diff']['after']['state'] == "absent"
+      - test_seven['msg'] == "tenant_group Test Tenant Group ABC deleted"
