Removed final dependency, but only used for testing, updated docs, updated changelog, update version numbers

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         run: poetry install
       - name: Build and install collection
         run: |
+          ansible-galaxy collection install community.general
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
       - name: Run Black
