--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: poetry install
       - name: Build and install collection
         run: |
-          ansible-galaxy collection install community.general
+          ansible-galaxy collection install community.general -p /home/runner/.ansible/collections
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
       - name: Run Black
