--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,6 +103,7 @@ jobs:
         run: poetry install
       - name: Build and install collection
         run: |
+          ansible-galaxy collection install community.general -p /home/runner/.ansible/collections
           ansible-galaxy collection build .
           ansible-galaxy collection install netbox*.tar.gz -p /home/runner/.ansible/collections
       - name: Wait for NetBox to be available
