--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ mock = "^4.0.2"
 antsibull = "^0.25.0"
 importlib-metadata = "1.7.0"
 pylint = "^2.6.0"
+packaging = "^20.9"
 
 [tool.poetry.dev-dependencies]
 
