NetBox 2.11 integration tests working, and several changes related to rack_group -> location, etc.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7]
+        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -46,8 +46,8 @@ jobs:
       matrix:
         include:
           - python-version: 3.6
-            VERSION: "v2.9"
-            INTEGRATION_TESTS: "v2.9"
+            VERSION: "v2.10"
+            INTEGRATION_TESTS: "v2.10"
           - python-version: 3.6
             VERSION: "latest"
             INTEGRATION_TESTS: "latest"
@@ -58,6 +58,25 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Clone & Start netbox-docker containers - 2.10
+        env:
+          VERSION: ${{ matrix.VERSION }}
+        run: |
+          cd ..
+          git clone https://github.com/netbox-community/netbox-docker.git
+          cd netbox-docker
+          git checkout 1.1.0
+          tee docker-compose.override.yml <<EOF
+          version: '3.4'
+          services:
+            netbox:
+              ports:
+                - 32768:8080
+          EOF
+          docker-compose up -d --quiet-pull
+          docker container ls
+          cd ..
+        if: matrix.VERSION == 'v2.10'
       - name: Clone & Start netbox-docker containers - latest
         env:
           VERSION: ${{ matrix.VERSION }}
@@ -76,25 +95,6 @@ jobs:
           docker container ls
           cd ..
         if: matrix.VERSION == 'latest'
-      - name: Clone & Start netbox-docker containers - 2.9
-        env:
-          VERSION: ${{ matrix.VERSION }}
-        run: |
-          cd ..
-          git clone https://github.com/netbox-community/netbox-docker.git
-          cd netbox-docker
-          git checkout 0.26.2
-          tee docker-compose.override.yml <<EOF
-          version: '3.4'
-          services:
-            nginx:
-              ports:
-                - 32768:8080
-          EOF
-          docker-compose up -d --quiet-pull
-          docker container ls
-          cd ..
-        if: matrix.VERSION == 'v2.9'
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1.1.1
         with:
