--- a/tests/integration/targets/inventory-v2.10/files/test-inventory-plurals.yml
+++ b/tests/integration/targets/inventory-v2.10/files/test-inventory-plurals.yml
@@ -1,16 +1,21 @@
 plugin: netbox.netbox.nb_inventory
 api_endpoint: "http://localhost:32768"
 token: "0123456789abcdef0123456789abcdef01234567"
-validate_certs: False
+validate_certs: false
+
+cache: True
+cache_timeout: 3600
+cache_plugin: jsonfile
+cache_connection: /tmp/inventory_netbox
 
 config_context: True
-flatten_config_context: True
-flatten_custom_fields: True
 plurals: True
-interfaces: False
-services: False
-fetch_all: True
-group_names_raw: True
+interfaces: True
+services: True
+
+# Enough to fit only 2 devices, so tests chunking logic
+max_uri_length: 80
+fetch_all: False
 
 group_by:
   - sites
@@ -28,3 +33,4 @@ group_by:
   - cluster_group
   - cluster_type
   - is_virtual
+  - status
