--- a/tests/integration/targets/v2.10/tasks/netbox_device.yml
+++ b/tests/integration/targets/v2.10/tasks/netbox_device.yml
@@ -65,7 +65,7 @@
       serial: "FXS1001"
       local_context_data:
         bgp_as: "65412"
-      virtual_chassis: "Test Nexus One"
+      virtual_chassis: "VC1"
       vc_position: 3
       vc_priority: 15
     state: present
