--- a/tests/integration/targets/v2.10/tasks/netbox_device_interface.yml
+++ b/tests/integration/targets/v2.10/tasks/netbox_device_interface.yml
@@ -289,3 +289,23 @@
     that:
       - test_eleven is failed
       - test_eleven['msg'] == "Must set update_vc_child to True to allow child device interface modification"
+
+- name: "12 - Create interface and mark it as connected"
+  netbox.netbox.netbox_device_interface:
+    netbox_url: "http://localhost:32768"
+    netbox_token: "0123456789abcdef0123456789abcdef01234567"
+    data:
+      device: test100
+      name: GigabitEthernet5
+      type: 1000Base-T (1GE)
+  register: test_twelve
+
+- name: "12- ASSERT"
+  assert:
+    that:
+      - test_twelve is changed
+      - test_twelve['msg'] == "interface GigabitEthernet5 created"
+      - test_twelve['diff']['before']['state'] == 'absent'
+      - test_twelve['diff']['after']['state'] == 'present'
+      - test_twelve['interface']['name'] == "GigabitEthernet5"
+      - test_twelve['interface']['device'] == 1
