--- a/tests/integration/targets/v3.0/tasks/netbox_site.yml
+++ b/tests/integration/targets/v3.0/tasks/netbox_site.yml
@@ -71,6 +71,7 @@
       name: Test - California
       status: Planned
       region: Test Region
+      site_group: Test Site Group
       tenant: Test Tenant
       facility: EquinoxCA7
       asn: 65001
@@ -98,6 +99,7 @@
       - test_four['msg'] == "site Test - California created"
       - test_four['site']['status'] == "planned"
       - test_four['site']['region'] == 1
+      - test_four['site']['group'] == 1
       - test_four['site']['tenant'] == 1
       - test_four['site']['facility'] == "EquinoxCA7"
       - test_four['site']['asn'] == 65001
@@ -121,6 +123,7 @@
       name: Test - California
       status: Planned
       region: Test Region
+      site_group: Test Site Group
       tenant: Test Tenant
       facility: EquinoxCA7
       asn: 65001
@@ -146,6 +149,7 @@
       - test_results['msg'] == "site Test - California already exists"
       - test_results['site']['status'] == "planned"
       - test_results['site']['region'] == 1
+      - test_results['site']['group'] == 1
       - test_results['site']['tenant'] == 1
       - test_results['site']['facility'] == "EquinoxCA7"
       - test_results['site']['asn'] == 65001
